NEX-1420 Create Bond Fixed Rate Asset.

--- a/src/assets/develop/utility/COU - Coupon.yaml
+++ b/src/assets/develop/utility/COU - Coupon.yaml
@@ -41,23 +41,18 @@ fields:
 
   - name: Value
     label: Value
-    type: uint
-    size: 8
-    example: Denominated in the smallest unit of currency specified in the Currency subfield.
-    span: right
-    displayOrder: 4
+    type: deprecated
+    example: >
+      Deprecated for new Currency Value type. Denominated in the smallest unit of currency specified 
+      in the Currency subfield.
 
   - name: Currency
     label: Currency
-    type: CurrencyType
-    description: International Organization for Standardization code for Currency. Currency for coupon. From resources/currency.
+    type: deprecated
+    description: >
+      Deprecated for new Currency Value type. International Organization for Standardization code 
+      for Currency. Currency for coupon. From resources/currency.
     example: AUD
-    span: right
-    displayOrder: 4
-    only_valid_when:
-      field_name: Value
-    required_when:
-      field_name: Value
 
   - name: Description
     label: Description
@@ -70,17 +65,23 @@ fields:
 
   - name: Precision
     label: Precision
-    description: Required field to specify the decimal precision of a currency. It will normally be the "precision" value associated with the Currency. It is the number of decimal places between the number of tokens and the common unit of measure. For example, in AUD, the common unit is the dollar, but a token would only be worth a penny. So the precision should be 2 for the two decimal places in a dollar amount "$1.00". In this scenario 100 tokens are worth $1.
-    type: uint
-    size: 8
-    example: 100
-    span: full
-    only_valid_when:
-      field_name: Value
-    required_when:
-      field_name: Value
+    type: deprecated
+    description: >
+      Deprecated for new Currency Value type. Required field to specify the decimal precision of a 
+      currency. It will normally be the "precision" value associated with the Currency. It is the 
+      number of decimal places between the number of tokens and the common unit of measure. For 
+      example, in AUD, the common unit is the dollar, but a token would only be worth a penny. So 
+      the precision should be 2 for the two decimal places in a dollar amount "$1.00". In this 
+      scenario 100 tokens are worth $1.
 
   - name: TransfersPermitted
     label: Transfers Permitted
-    description: "Set to true if transfers are permitted between two parties, otherwise set to false to prevent peer-to-peer transfers."
+    description: >
+      Set to true if transfers are permitted between two parties, otherwise set to false to prevent 
+      peer-to-peer transfers.
     type: bool
+
+  - name: Value
+    label: Value
+    description: Value of each coupon specified in a currency.
+    type: CurrencyValue
