--- a/src/assets/develop/utility/CHP - Casino Chip.yaml
+++ b/src/assets/develop/utility/CHP - Casino Chip.yaml
@@ -15,7 +15,8 @@ fields:
     label: Currency Code
     type: CurrencyType
     example: AUD
-    description: International Organization for Standardization code for Currency. (Specification/Resources)
+    description: >
+      International Organization for Standardization code for Currency. (Specification/Resources)
     span: full
     required: true
 
@@ -29,6 +30,7 @@ fields:
       - 'R'
       - 'S'
       - 'F'
+    require: true
 
   - name: AgeRestriction
     label: Age Restriction
@@ -50,10 +52,10 @@ fields:
   - name: Precision
     label: Precision
     description: >
-      Required field to specify the decimal precision of a currency. It will normally be the 
-      "precision" value associated with the CurrencyCode. It is the number of decimal places between 
-      the number of tokens and the common unit of measure. For example, in AUD, the common unit is 
-      the dollar, but a token would only be worth a penny. So the precision should be 2 for the two 
+      Required field to specify the decimal precision of a currency. It will normally be the
+      "precision" value associated with the CurrencyCode. It is the number of decimal places between
+      the number of tokens and the common unit of measure. For example, in AUD, the common unit is
+      the dollar, but a token would only be worth a penny. So the precision should be 2 for the two
       decimal places in a dollar amount "$1.00". In this scenario 100 tokens are worth $1.
     type: uint
     size: 8
