NEX-1420 Make bond fixed rate maturity required.

--- a/src/assets/develop/security/BFR - Bond Fixed Rate.yaml
+++ b/src/assets/develop/security/BFR - Bond Fixed Rate.yaml
@@ -96,6 +96,7 @@ fields:
     label: Maturity Date
     description: The date of the maturity of the bond. When the par value is paid.
     type: Timestamp
+    required: true
 
   - name: AgeRestriction
     label: Age Restriction
