--- a/src/assets/develop/utility/CHP - Casino Chip.yaml
+++ b/src/assets/develop/utility/CHP - Casino Chip.yaml
@@ -39,14 +39,11 @@ fields:
 
   - name: ValidFrom
     label: Valid From
-    type: Timestamp
-    example: Fri Nov 09 2018 09:00:00 GMT+1000 (AEST)
-    span: right
+    type: deprecated
 
   - name: ExpirationTimestamp
     label: Expiration Timestamp
     type: Timestamp
-    example: Fri Nov 09 2018 09:00:00 GMT+1000 (AEST)
     span: right
 
   - name: Precision
