--- a/src/assets/develop/utility/TIC - Admission Ticket.yaml
+++ b/src/assets/develop/utility/TIC - Admission Ticket.yaml
@@ -65,22 +65,17 @@ fields:
   - name: StartTimeDate
     label: Start Time and Date
     type: Timestamp
-    example: Mon Nov 05 2018 09:00:00 GMT+1000 (AEST)
     span: left
     displayOrder: 2
     default: now
 
   - name: ValidFrom
     label: Valid From
-    type: Timestamp
-    example: Fri Nov 09 2018 09:00:00 GMT+1000 (AEST)
-    span: right
-    displayOrder: 3
+    type: deprecated
 
   - name: ExpirationTimestamp
     label: Expiration Timestamp
     type: Timestamp
-    example: Fri Nov 09 2018 09:00:00 GMT+1000 (AEST)
     span: right
     displayOrder: 3
 
