--- a/src/templates/develop/private_company/assets/Loyalty Points.yaml
+++ b/src/templates/develop/private_company/assets/Loyalty Points.yaml
@@ -21,7 +21,7 @@ Permissions:
       - [HolderProposal]
       - [AssetModificationGovernance]
       - [AssetPayload, AgeRestriction]
-      - [AssetPayload, OfferName]
+      - [AssetPayload, ProgramName]
 
   - Name: Administrator Direct
     Permitted: true
@@ -31,6 +31,5 @@ Permissions:
     VotingSystemsAllowed:
     Fields:
       - [AuthorizedTokenQty]
-      - [AssetPayload, ValidFrom]
       - [AssetPayload, ExpirationTimestamp]
-      - [AssetPayload, Description]
+      - [AssetPayload, Details]
