--- a/src/templates/develop/private_company/assets/Ticket (Admission).yaml
+++ b/src/templates/develop/private_company/assets/Ticket (Admission).yaml
@@ -30,12 +30,10 @@ Permissions:
     Fields:
       - [AuthorizedTokenQty]
       - [AssetPayload, AgeRestriction]
-      - [AssetPayload, AdmissionType]
       - [AssetPayload, Venue]
-      - [AssetPayload, Class]
       - [AssetPayload, Area]
+      - [AssetPayload, Section]
+      - [AssetPayload, Row]
       - [AssetPayload, Seat]
-      - [AssetPayload, StartTimeDate]
-      - [AssetPayload, ValidFrom]
-      - [AssetPayload, ExpirationTimestamp]
-      - [AssetPayload, Description]
+      - [AssetPayload, EventTimestamp]
+      - [AssetPayload, Details]
