--- a/src/assets/develop/utility/COU - Coupon.yaml
+++ b/src/assets/develop/utility/COU - Coupon.yaml
@@ -24,18 +24,16 @@ fields:
     span: full
     displayOrder: 2
 
-  - name: IssueDate
-    label: Issue Date
+  - name: ValidFromTimestamp
+    label: Valid From Timestamp
     type: Timestamp
-    example: Sat Dec 12 2015 18:00:00 GMT+1000 (AEST)
     span: left
     displayOrder: 3
     default: now
 
-  - name: ExpiryDate
-    label: Expiry Date
+  - name: ExpiryTimestamp
+    label: Expiry Timestamp
     type: Timestamp
-    example: Sat Dec 12 2020 18:00:00 GMT+1000 (AEST)
     span: right
     displayOrder: 4
 
@@ -43,45 +41,53 @@ fields:
     label: Value
     type: deprecated
     example: >
-      Deprecated for new Currency Value type. Denominated in the smallest unit of currency specified 
+      Deprecated for new Currency Value type. Denominated in the smallest unit of currency specified
       in the Currency subfield.
 
   - name: Currency
     label: Currency
     type: deprecated
     description: >
-      Deprecated for new Currency Value type. International Organization for Standardization code 
+      Deprecated for new Currency Value type. International Organization for Standardization code
       for Currency. Currency for coupon. From resources/currency.
     example: AUD
 
-  - name: Description
-    label: Description
+  - name: CouponName
+    label: Coupon Name
     type: varchar
-    varSize: small
+    varSize: tiny
     example: Gift Card
-    span: full
-    displayOrder: 1
     required: true
 
   - name: Precision
     label: Precision
     type: deprecated
     description: >
-      Deprecated for new Currency Value type. Required field to specify the decimal precision of a 
-      currency. It will normally be the "precision" value associated with the Currency. It is the 
-      number of decimal places between the number of tokens and the common unit of measure. For 
-      example, in AUD, the common unit is the dollar, but a token would only be worth a penny. So 
-      the precision should be 2 for the two decimal places in a dollar amount "$1.00". In this 
+      Deprecated for new Currency Value type. Required field to specify the decimal precision of a
+      currency. It will normally be the "precision" value associated with the Currency. It is the
+      number of decimal places between the number of tokens and the common unit of measure. For
+      example, in AUD, the common unit is the dollar, but a token would only be worth a penny. So
+      the precision should be 2 for the two decimal places in a dollar amount "$1.00". In this
       scenario 100 tokens are worth $1.
 
   - name: TransfersPermitted
     label: Transfers Permitted
     description: >
-      Set to true if transfers are permitted between two parties, otherwise set to false to prevent 
+      Set to true if transfers are permitted between two parties, otherwise set to false to prevent
       peer-to-peer transfers.
     type: bool
 
-  - name: Value
-    label: Value
-    description: Value of each coupon specified in a currency.
+  - name: FaceValue
+    label: Face Value
+    description: Face value of each coupon specified in a currency.
     type: CurrencyValue
+
+  - name: RedemptionVenue
+    label: Redemption Venue
+    type: varchar
+    varSize: tiny
+
+  - name: Details
+    label: Details
+    type: varchar
+    varSize: small
