--- a/src/assets/develop/utility/LOY - Loyalty Points.yaml
+++ b/src/assets/develop/utility/LOY - Loyalty Points.yaml
@@ -20,11 +20,11 @@ fields:
     type: AgeRestriction
     description: "Age restriction is used to specify required ages for asset ownership."
 
-  - name: OfferName
-    label: Offer Name
+  - name: ProgramName
+    label: Program Name
     type: varchar
     example: Qantas Frequent Flyer Points
-    options:
+    required: true
 
   - name: ValidFrom
     label: Valid From
@@ -33,19 +33,15 @@ fields:
   - name: ExpirationTimestamp
     label: Expiration Timestamp
     type: Timestamp
-    span: right
-    displayOrder: 3
 
-  - name: Description
-    label: Description
+  - name: Details
+    label: Details
     type: varchar
     varSize: small
-    example: Coingeek Conference - London (November 2018).
-    span: full
-    displayOrder: 1
-    required: true
 
   - name: TransfersPermitted
     label: Transfers Permitted
-    description: "Set to true if transfers are permitted between two parties, otherwise set to false to prevent peer-to-peer transfers."
+    description: >
+      Set to true if transfers are permitted between two parties, otherwise set to false to prevent
+      peer-to-peer transfers.
     type: bool
