NEX-1497 Clean up some issues originally missed.

--- a/src/assets/develop/utility/CHP - Casino Chip.yaml
+++ b/src/assets/develop/utility/CHP - Casino Chip.yaml
@@ -13,12 +13,8 @@ metadata:
 fields:
   - name: CurrencyCode
     label: Currency Code
-    type: CurrencyType
-    example: AUD
-    description: >
-      International Organization for Standardization code for Currency. (Specification/Resources)
-    span: full
-    required: true
+    description: Deprecated for FaceValue
+    type: deprecated
 
   - name: UseType
     label: Use Type
@@ -43,21 +39,11 @@ fields:
   - name: ExpirationTimestamp
     label: Expiration Timestamp
     type: Timestamp
-    span: right
 
   - name: Precision
     label: Precision
-    description: >
-      Required field to specify the decimal precision of a currency. It will normally be the
-      "precision" value associated with the CurrencyCode. It is the number of decimal places between
-      the number of tokens and the common unit of measure. For example, in AUD, the common unit is
-      the dollar, but a token would only be worth a penny. So the precision should be 2 for the two
-      decimal places in a dollar amount "$1.00". In this scenario 100 tokens are worth $1.
-    type: uint
-    size: 8
-    example: 100
-    span: full
-    required: true
+    description: Deprecated for FaceValue
+    type: deprecated
 
   - name: TransfersPermitted
     label: Transfers Permitted
@@ -68,9 +54,7 @@ fields:
 
   - name: CasinoName
     label: Casino Name
-    description: >
-      Set to true if transfers are permitted between two parties, otherwise set to false to prevent
-      peer-to-peer transfers.
+    description: The name of the casino, or host, of the chip.
     type: varchar
     varSize: tiny
     required: true
