--- a/src/templates/develop/private_company/assets/Casino Chip.yaml
+++ b/src/templates/develop/private_company/assets/Casino Chip.yaml
@@ -29,7 +29,7 @@ Permissions:
     VotingSystemsAllowed:
     Fields:
       - [AuthorizedTokenQty]
-      - [AssetPayload, CurrencyCode]
+      - [AssetPayload, FaceValue]
       - [AssetPayload, UseType]
       - [AssetPayload, AgeRestriction]
       - [AssetPayload, ValidFrom]
