--- a/src/templates/develop/private_company/assets/Coupon.yaml
+++ b/src/templates/develop/private_company/assets/Coupon.yaml
@@ -30,6 +30,6 @@ Permissions:
     Fields:
       - [AuthorizedTokenQty]
       - [AssetPayload, RedeemingEntity]
-      - [AssetPayload, ExpiryTimestamp]
+      - [AssetPayload, ExpirationTimestamp]
       - [AssetPayload, FaceValue]
       - [AssetPayload, Details]
