--- a/src/templates/develop/private_company/assets/Ticket (Admission).yaml
+++ b/src/templates/develop/private_company/assets/Ticket (Admission).yaml
@@ -35,5 +35,6 @@ Permissions:
       - [AssetPayload, Section]
       - [AssetPayload, Row]
       - [AssetPayload, Seat]
-      - [AssetPayload, EventTimestamp]
+      - [AssetPayload, EventStartTimestamp]
+      - [AssetPayload, EventEndTimestamp]
       - [AssetPayload, Details]
