--- a/src/actions/develop/actions/C2 - Contract Formation.yaml
+++ b/src/actions/develop/actions/C2 - Contract Formation.yaml
@@ -25,10 +25,7 @@ fields:
   - name: ContractName
     label: Contract Name
     description: >
-      Can be any unique identifying string, including human readable names for branding/vanity purposes.
-      Contract identifier (instance) is the bitcoin public key hash address.
-      If the public address is lost, then the administration will have to reissue the entire contract, asset definition and tokens with the new public address.
-      Smart contracts can be branded and specialized to suit any terms and conditions.
+      The name/title of the contract.
     type: varchar
     example: "Tesla - Shareholder Agreement"
 
@@ -218,7 +215,7 @@ fields:
   - name: ContractType
     label: Contract Type
     description: "Describes the purpose of the contract. 0 - Entity, 1 - Asset"
-    type: uint 
+    type: uint
     size: 1
     options:
       - 0
