--- a/src/assets/develop/utility/ISL - Information Service License.yaml
+++ b/src/assets/develop/utility/ISL - Information Service License.yaml
@@ -40,3 +40,9 @@ fields:
         Set to true if transfers are permitted between two parties, otherwise set to false to
         prevent peer-to-peer transfers.
     type: bool
+
+  - name: URL
+    label: URL
+    type: string
+    required: false
+    description: "URL linking to any related documents or media"
