ISL change string to varchar

--- a/src/assets/develop/utility/ISL - Information Service License.yaml
+++ b/src/assets/develop/utility/ISL - Information Service License.yaml
@@ -39,6 +39,7 @@ fields:
 
   - name: URL
     label: URL
-    type: string
+    type: varchar
+    varSize: small
     required: false
     description: "URL linking to any related documents or media"
