NEX-1524 Add distribution message.

--- a/src/actions/develop/actions/C3 - Contract Amendment.yaml
+++ b/src/actions/develop/actions/C3 - Contract Amendment.yaml
@@ -8,7 +8,7 @@ label: Contract Amendment
 description: "The administration can initiate an amendment to the contract establishment metadata. The ability to make an amendment to the contract is restricted by the Authorization Flag set on the current revision of Contract Formation action."
 
 metadata:
-  validation: AssetCreation
+  validation: ContractFormation
   rejection: Rejection
 
   inputs:
