--- a/src/actions/develop/actions/T1 - Transfer.yaml
+++ b/src/actions/develop/actions/T1 - Transfer.yaml
@@ -8,7 +8,7 @@ label: Transfer
 description: "A Token Owner(s) Sends, Exchanges or Swaps a token(s) or Bitcoin for a token(s) or Bitcoin.  Can be as simple as sending a single token to a receiver.  Or can be as complex as many senders sending many different assets - controlled by many different smart contracts - to a number of receivers.  This action also supports atomic swaps (tokens for tokens).  Since many parties and contracts can be involved in a transfer and the corresponding settlement action, the partially signed T1 and T2 actions will need to be passed around on-chain with an M1 action, or off-chain."
 
 metadata:
-  validation: AssetCreation
+  validation: Settlement
   rejection: Rejection
 
   inputs:
