--- a/src/actions/develop/actions/C1 - Contract Offer.yaml
+++ b/src/actions/develop/actions/C1 - Contract Offer.yaml
@@ -194,7 +194,9 @@ fields:
 
   - name: EntityContract
     label: Entity Contract
-    description: "The address of the contract's parent entity. This is optional for entity contracts, but required for asset and service contracts to identify the entity parent contract."
+    description: >
+      The address of the contract's parent entity. This is not valid for entity contracts, but
+      required for asset and service contracts to identify the entity parent contract.
     type: Address
     only_valid_when:
       field_name: ContractType
